<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="app.modeltest.com.modeltest.fragment.RegistrationCompleteFragment">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/verificationCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="1234567890+"
            android:hint="@string/verification_code"
            android:inputType="phone"
            android:maxLines="1"
            android:singleLine="true" />
        <requestFocus/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/set_password"
            android:imeActionId="@+id/login"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/createProfile"
        style="?android:textAppearanceSmall"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_20dp"
        android:background="@drawable/button_bg"
        android:imeOptions="actionDone"
        android:text="@string/create_profile"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size_17sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/code_sent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/text_size_17sp"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/verification_code_sent_text" />
    <TextView
        android:id="@+id/resend_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/resend_text" />

</LinearLayout>
