<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="app.modeltest.com.modeltest.fragment.RegistrationFragment">
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:hint="@string/full_name"
            android:imeActionId="@+id/login"
            android:imeOptions="actionUnspecified"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"/>
        <requestFocus/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/mobileNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="1234567890+"
            android:focusable="true"
            android:hint="@string/reg_mobile_no_text"
            android:inputType="phone"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:hint="@string/email_text"
            android:imeActionId="@+id/login"
            android:imeOptions="actionUnspecified"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/submitBtn"
        style="?android:textAppearanceSmall"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_20dp"
        android:background="@drawable/button_bg"
        android:imeOptions="actionDone"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size_17sp"
        android:textStyle="bold"/>

</LinearLayout>
