<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="app.modeltest.com.modeltest.fragment.LoginFragment">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollIndicators="none">

        <LinearLayout
            android:id="@+id/login_with_mobile_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:src="@drawable/bcb"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/mobileNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="1234567890+"
                    android:hint="@string/mobile_no_text"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>
            <TextView
                android:id="@+id/tv_forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/margin_10dp"
                android:layout_marginTop="@dimen/margin_10dp"
                android:text="@string/forgot_password_text"
                android:textColor="@color/forgot_password_color"
                android:textSize="14sp"
                android:visibility="visible" />
            <!--android:imeActionLabel="@string/action_sign_in_short"-->

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/button_bg"
                android:text="@string/action_sign_in"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_17sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/not_registered"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/margin_20dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="@dimen/margin_20dp"
                android:text=""
                android:textColor="@color/forgot_password_color"
                android:textSize="14sp"
                android:visibility="visible" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
