<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#03373f"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="app.modeltest.com.modeltest.activity.ResultPageActivity"
    tools:showIn="@layout/activity_result_page">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/adView"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layoutShare"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorWindowBg"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/linearLayout4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="20dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/your_score"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="28sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:id="@+id/linearLayout3"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_weight="1"
                            android:background="@color/colorPrimaryDark"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/txtYourMarks"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="0"
                                android:textColor="@color/colorWhite"
                                android:textSize="36sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>

                <!--<LinearLayout-->
                    <!--android:orientation="horizontal"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:gravity="center_vertical"-->
                    <!--android:id="@+id/linearLayout6"-->
                    <!--android:layout_margin="20dp">-->

                    <!--<TextView-->
                        <!--android:layout_width="0dp"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_weight="1"-->
                        <!--android:textStyle="bold"-->
                        <!--android:layout_marginRight="5dp"-->
                        <!--android:textSize="18sp"-->
                        <!--android:gravity="center"-->
                        <!--android:textColor="@color/colorWhite"-->
                        <!--android:text="@string/share_your_score"-->
                        <!--android:id="@+id/textView10" />-->

                    <!--<android.support.v7.widget.AppCompatImageButton-->
                        <!--android:id="@+id/btnShare"-->
                        <!--android:layout_width="0dp"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_marginLeft="5dp"-->
                        <!--android:layout_weight="1"-->
                        <!--android:background="@drawable/selector_btn_facebook_share"/>-->

                <!--</LinearLayout>-->
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutMid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/linearLayout5"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.5"
                        android:background="#0e565c"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/your_best"
                            android:textColor="@color/colorWhite"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:background="#094046"></LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:background="#064751"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txtBestScore"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0"
                            android:textColor="@color/colorWhite"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#094046"></LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.5"
                        android:background="#0e565c"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp">

                        <TextView
                            android:id="@+id/textView9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/total_score"
                            android:textColor="@color/colorWhite"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:background="#094046"></LinearLayout>


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:background="#064751"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txtTotalMarks"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0"
                            android:textColor="@color/colorWhite"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#094046"></LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.5"
                        android:background="#0e565c"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/highest_score"
                            android:textColor="@color/colorWhite"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:background="#094046"></LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:background="#064751"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txtHighestScore"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0"
                            android:textColor="@color/colorWhite"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#094046"></LinearLayout>




            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/adView"
                android:layout_margin="10dp"
                android:orientation="vertical">



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/btnTryAgain"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/txt_try_again"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/btnSummery"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/txt_summery"/>




                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/btnSaveScore"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/txt_save_score"/>

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/btnTopScore"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/txt_top_scores"/>




                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>




    <include
        android:id="@+id/include"
        layout="@layout/layout_circular_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

    </include>

    <!--<com.google.android.gms.ads.AdView-->
        <!--android:id="@+id/adView"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--app:adSize="BANNER"-->
        <!--app:adUnitId="@string/admob_ad_id">-->
    <!--</com.google.android.gms.ads.AdView>-->

</RelativeLayout>
